test/resource/valid/strlitinterpolation.ftl
<@m '${e1}' '$\\{e2}' />
