test/resource/invalid/noescape.ftl
<#noescape>${1}</#noescape>
